# arguably

./: .gitignore  README.md  pyproject.toml
arguably/: __init__.py  arguably.py
examples/: basic.py  chain_example.py  compress.py  count.py  main_example.py
