[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arguably"
version = "0.1.1"
description = "Tiny decorator-based CLI argument parser"
readme = "README.md"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
]

[project.urls]
Source = "https://example.com/your-repo"

[tool.setuptools.packages.find]
where = ["."]
include = ["arguably*"]
