[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arguably"
version = "0.1.1"
description = "Tiny decorator-based CLI argument parser"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "Mustafa Amir Naif Alimari }]
dependencies = [
  "flask>=2.3,<4",
]

[project.urls]
Homepage = "https://github.com/jooki96/qapi"
Issues = "https://github.com/jooki96/qapi/issues"

[tool.setuptools.packages.find]
where = [""]
include = ["qapi*"]
